[tool.poetry]
name = "nickel2calendar"
version = "0.1.0"
description = "A calendar generation app"
authors = ["Nickel <nsulfate@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"
Pillow = "^9.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
